♻️ Add Google Calendar class

--- a/notebooks/calendar.ipynb
+++ b/notebooks/calendar.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Google Calendar API\n",
+    "\n",
+    "[Descripción general de la API de Google Calendar  |  Google for Developers](https://developers.google.com/calendar/api/guides/overview?hl=es-419)\n",
+    "\n",
+    "Guía rapida obtener credenciales de autenticación y los eventos de un calendario:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -12,11 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=69722697557-n13nrkrq7t630sthrt70fucdcmn19hsl.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A51582%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcalendar.readonly&state=egQvmqpsqsYXGEHG5FEcVpKlmFLF9I&access_type=offline\n",
+      "Getting the upcoming 10 events\n",
+      "2024-12-10T10:00:00-06:00 Reunion con el equipo\n"
+     ]
+    }
+   ],
    "source": [
-    "from datetime import datetime, UTC\n",
+    "import datetime\n",
     "import os.path\n",
     "\n",
     "from google.auth.transport.requests import Request\n",
@@ -26,7 +47,7 @@
     "from googleapiclient.errors import HttpError\n",
     "\n",
     "# If modifying these scopes, delete the file token.json.\n",
-    "SCOPES = [\"https://www.googleapis.com/auth/calendar\"]\n",
+    "SCOPES = [\"https://www.googleapis.com/auth/calendar.readonly\"]\n",
     "\n",
     "\n",
     "def main():\n",
@@ -56,10 +77,9 @@
     "    service = build(\"calendar\", \"v3\", credentials=creds)\n",
     "\n",
     "    # Call the Calendar API\n",
-    "    # now = datetime.now(UTC).isoformat() + \"Z\"  # 'Z' indicates UTC time\n",
-    "    # now = datetime.utcnow().isoformat() + \"Z\"\n",
-    "    now = datetime.now(UTC).isoformat().rsplit(\"+\", 1)[0] + \"Z\"\n",
-    "    print(\"Getting the upcoming 10 events \\n now: \", now)\n",
+    "    # now = datetime.datetime.utcnow().isoformat() + \"Z\"  # 'Z' indicates UTC time\n",
+    "    now = datetime.datetime.now(datetime.UTC).isoformat().rsplit(\"+\", 1)[0] + \"Z\"\n",
+    "    print(\"Getting the upcoming 10 events\")\n",
     "    events_result = (\n",
     "        service.events()\n",
     "        .list(\n",
@@ -94,287 +114,179 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "---\n",
+    "\n",
+    "## Clase Calendar \n",
+    "Para interactuar con la API de Google Calendar, se puede utilizar la clase `Calendar` que tiene los siguientes métodos:\n",
+    "- `get_credentials()`: Obtiene las credenciales de autenticación.\n",
+    "- `get_service()`: Obtiene el servicio de Google Calendar.\n",
+    "- `get_id_calendar()`: Obtiene el id de todos los calendarios.\n",
+    "- `get_calendars_info()`: Obtiene la información de todos los calendarios.\n",
+    "- `create_event_body()`: Crea el cuerpo de un evento.\n",
+    "- `create_event()`: Crea un evento (con el cuerpo del evento).\n",
+    "- `get_current_time()`: Obtiene la fecha y hora actual.\n",
+    "- `plus_time()`: Suma un tiempo a una fecha dada."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import os.path\n",
+    "from typing import Any, List, Dict, Optional, Union\n",
+    "from datetime import datetime, timedelta\n",
     "\n",
     "from google.auth.transport.requests import Request\n",
     "from google.oauth2.credentials import Credentials\n",
     "from google_auth_oauthlib.flow import InstalledAppFlow\n",
+    "from googleapiclient.discovery import build\n",
+    "from googleapiclient.errors import HttpError\n",
     "\n",
     "\n",
     "# If modifying these scopes, delete the file token.json.\n",
     "SCOPES = [\"https://www.googleapis.com/auth/calendar\"]\n",
     "\n",
     "\n",
-    "def get_credentials():\n",
-    "  creds = None\n",
-    "  if os.path.exists(\"token.json\"):\n",
-    "    creds = Credentials.from_authorized_user_file(\"token.json\", SCOPES)\n",
-    "  # If there are no (valid) credentials available, let the user log in.\n",
-    "  if not creds or not creds.valid:\n",
-    "    if creds and creds.expired and creds.refresh_token:\n",
-    "      creds.refresh(Request())\n",
-    "    else:\n",
-    "      flow = InstalledAppFlow.from_client_secrets_file(\n",
-    "          \"credentials.json\", SCOPES\n",
-    "      )\n",
-    "      creds = flow.run_local_server(port=0)\n",
-    "    # Save the credentials for the next run\n",
-    "    with open(\"token.json\", \"w\") as token:\n",
-    "      token.write(creds.to_json())\n",
+    "class Calendar():\n",
+    "    @classmethod\n",
+    "    def get_credentials(cls, secrets_path: str):\n",
+    "        creds = None\n",
+    "        if os.path.exists(secrets_path+\"token.json\"):\n",
+    "            creds = Credentials.from_authorized_user_file(secrets_path+\"token.json\", SCOPES)\n",
+    "        # If there are no (valid) credentials available, let the user log in.\n",
+    "        if not creds or not creds.valid:\n",
+    "            if creds and creds.expired and creds.refresh_token:\n",
+    "                creds.refresh(Request())\n",
+    "            else:\n",
+    "                flow = InstalledAppFlow.from_client_secrets_file(\n",
+    "                    secrets_path+\"credentials.json\", SCOPES\n",
+    "                )\n",
+    "                creds = flow.run_local_server(port=0)\n",
+    "            # Save the credentials for the next run\n",
+    "            with open(secrets_path+\"token.json\", \"w\") as token:\n",
+    "                token.write(creds.to_json())\n",
+    "            return creds\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def get_service(cls, secrets_path: str = \"../secrets/\"):\n",
+    "        creds = cls.get_credentials(secrets_path)\n",
+    "        return build(\"calendar\", \"v3\", credentials=creds)\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def get_id_calendars(cls, service: Any) -> List[str]:\n",
+    "        calendars = []\n",
+    "        for cal in service.calendarList().list().execute().get('items', []):\n",
+    "            if cal.get('selected', None): # select relevant calendars in google calendar UI\n",
+    "                calendars.append(cal['id'])\n",
+    "        return calendars\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def get_calendars_info(cls, service: Any) -> List[dict]:\n",
+    "        calendars = service.calendarList().list().execute()\n",
+    "        data = []\n",
+    "        for item in calendars.get('items', []):\n",
+    "            if item['accessRole'] != 'reader':\n",
+    "                data.append({'kind': item['kind'], 'id': item['id'], 'timeZone': item['timeZone']})\n",
+    "        return data\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def create_event_body(cls, \n",
+    "                          summary: str, \n",
+    "                          start_time: str,\n",
+    "                          end_time: str,\n",
+    "                          timezone: str,\n",
+    "                          location: Optional[str] = None,\n",
+    "                          description: Optional[str] = None,\n",
+    "                          recurrence: Optional[List[str]] = None,\n",
+    "                          attendees: Optional[List[Dict[str, str]]] = None,\n",
+    "                          reminders: Optional[Dict[str, Union[bool, List[Dict[str, Union[str, int]]]]]] = None,\n",
+    "                          conference_data: Optional[Dict[str, dict]] = None \n",
+    "                        ) -> Dict[str, Any]:\n",
+    "        return {\n",
+    "            \"summary\": summary,\n",
+    "            \"location\": location,\n",
+    "            \"description\": description,\n",
+    "            \"start\": {\"dateTime\": start_time, \"timeZone\": timezone},\n",
+    "            \"end\": {\"dateTime\": end_time, \"timeZone\": timezone},\n",
+    "            \"recurrence\": recurrence,\n",
+    "            \"attendees\": attendees,\n",
+    "            \"reminders\": reminders,\n",
+    "            \"conferenceData\": conference_data\n",
+    "        }\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def create_event(cls, service: Any,\n",
+    "                     body: Dict, \n",
+    "                     calendarId: str = 'primary', \n",
+    "                     conferenceData: int = 0) -> str:\n",
+    "    \n",
+    "        event = service.events().insert(calendarId=calendarId, \n",
+    "                                        body=body, \n",
+    "                                        conferenceDataVersion=conferenceData).execute()\n",
+    "        return event.get('htmlLink')\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def get_current_time(cls) -> str:\n",
+    "        return datetime.now().astimezone().replace(microsecond=0).isoformat()\n",
     "\n",
-    "    return creds"
+    "    @classmethod\n",
+    "    def plus_time(cls, current_datetime: str, minutes: int) -> str:\n",
+    "        date_object = datetime.fromisoformat(current_datetime).strftime('%Y-%m-%d %H:%M:%S')\n",
+    "        new_date = datetime.strptime(date_object, '%Y-%m-%d %H:%M:%S') + timedelta(minutes=minutes)\n",
+    "        return new_date.replace(microsecond=0).isoformat()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=69722697557-n13nrkrq7t630sthrt70fucdcmn19hsl.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A57724%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcalendar&state=sDrsBJgqErPXoCWt0OuIJfjKsNbq6Z&access_type=offline\n"
+      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=69722697557-n13nrkrq7t630sthrt70fucdcmn19hsl.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A53710%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcalendar&state=BnqJf8yScI6ArWLoRxA6yW4XaIaCFe&access_type=offline\n"
      ]
     }
    ],
    "source": [
-    "from googleapiclient.discovery import build\n",
-    "\n",
-    "\n",
-    "creds = get_credentials()\n",
-    "service = build(\"calendar\", \"v3\", credentials=creds)    "
+    "service = Calendar.get_service()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'kind': 'calendar#calendarListEntry',\n",
-       "  'id': 'jorgeang33@gmail.com',\n",
-       "  'timeZone': 'America/Mexico_City'},\n",
-       " {'kind': 'calendar#calendarListEntry',\n",
-       "  'id': 'stdevelopersyelling@gmail.com',\n",
-       "  'timeZone': 'America/Mexico_City'},\n",
-       " {'kind': 'calendar#calendarListEntry',\n",
-       "  'id': '9a1c2703ead6fd80455f9e1eb04158669a60d7ab77a8a29ea9ae8d530954b4f7@group.calendar.google.com',\n",
-       "  'timeZone': 'America/Mexico_City'}]"
+       "'https://www.google.com/calendar/event?eid=ZTZjbm1jbTg1cGwyY2czbzkyMGFwaDZ1MzQgam9yZ2VhbmczM0Bt'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def get_calendars_info():\n",
-    "  # Call the Calendar API\n",
-    "  calendars = service.calendarList().list().execute()\n",
-    "  data = []\n",
-    "  for item in calendars.get('items', []):\n",
-    "    if item['accessRole'] != 'reader':\n",
-    "      data.append({'kind': item['kind'], 'id': item['id'], 'timeZone': item['timeZone']})\n",
-    "  return data\n",
+    "Calendar.get_id_calendars(service)\n",
+    "Calendar.get_calendars_info(service)\n",
     "\n",
-    "\n",
-    "get_calendars_info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Optional, Union, List, Dict, TypeAlias, Literal\n",
-    "\n",
-    "def create_event_body(summary: str, \n",
-    "                      start_time: str,\n",
-    "                      end_time: str,\n",
-    "                      timezone: str,\n",
-    "                      location: Optional[str] = None,\n",
-    "                      description: Optional[str] = None,\n",
-    "                      recurrence: Optional[List[str]] = None,\n",
-    "                      attendees: Optional[List[Dict[str, str]]] = None,\n",
-    "                      reminders: Optional[Dict[str, Union[bool, List[Dict[str, Union[str, int]]]]]] = None,\n",
-    "                      conference_data: Optional[Dict[str, dict]] = None \n",
-    "                      ):\n",
-    "    return {\n",
-    "        \"summary\": summary,\n",
-    "        \"location\": location,\n",
-    "        \"description\": description,\n",
-    "        \"start\": {\"dateTime\": start_time, \"timeZone\": timezone},\n",
-    "        \"end\": {\"dateTime\": end_time, \"timeZone\": timezone},\n",
-    "        \"recurrence\": recurrence,\n",
-    "        \"attendees\": attendees,\n",
-    "        \"reminders\": reminders,\n",
-    "        \"conferenceData\": conference_data\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Dict, TypeAlias, Literal\n",
-    "\n",
-    "\n",
-    "ConferenceData: TypeAlias = Literal[0, 1]\n",
-    "# 0: No permite crear una reunión con Google Meet\n",
-    "# 1: Permite crear una reunión con Google Meet\n",
-    "\n",
-    "def create_event(body: Dict, \n",
-    "                 calendarId: str = 'primary', \n",
-    "                 conferenceData: ConferenceData = 1) -> str:\n",
-    "    \n",
-    "    event = service.events().insert(calendarId=calendarId, \n",
-    "                                    body=body, \n",
-    "                                    conferenceDataVersion=conferenceData).execute()\n",
-    "    return event.get('htmlLink')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import datetime, timedelta\n",
-    "\n",
-    "def get_current_time():\n",
-    "    return datetime.now().astimezone().replace(microsecond=0).isoformat()\n",
-    "\n",
-    "def plus_time(current_datetime: str, minutes: int):\n",
-    "    date_object = datetime.fromisoformat(current_datetime).strftime('%Y-%m-%d %H:%M:%S')\n",
-    "    new_date = datetime.strptime(date_object, '%Y-%m-%d %H:%M:%S') + timedelta(minutes=minutes)\n",
-    "    return new_date.replace(microsecond=0).isoformat()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.google.com/calendar/event?eid=OGZ0NHBtOGllbjIzbW1yZHUxM3RsM2JkNGMgam9yZ2VhbmczM0Bt\n"
-     ]
-    }
-   ],
-   "source": [
-    "now = get_current_time()\n",
-    "end = plus_time(now, 30)\n",
-    "\n",
-    "event_body = create_event_body(summary='Test Event', start_time=now, end_time=end, timezone='America/Mexico_City')\n",
-    "\n",
-    "link = create_event(event_body)\n",
-    "\n",
-    "print(link)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Event created: https://www.google.com/calendar/event?eid=cmd0Y2NldnU0cHRiYjl1a2pyNTltdWRkaTggam9yZ2VhbmczM0Bt\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Refer to the Python quickstart on how to setup the environment:\n",
-    "# https://developers.google.com/calendar/quickstart/python\n",
-    "# Change the scope to 'https://www.googleapis.com/auth/calendar' and delete any\n",
-    "# stored credentials.\n",
-    "\n",
-    "import uuid\n",
-    "\n",
-    "# event = {\n",
-    "#   'summary': 'Evento Random',\n",
-    "#   'location': '800 Howard St., San Francisco, CA 94103',\n",
-    "#   'description': 'A chance to hear more about Google\\'s developer products.',\n",
-    "#   'start': {\n",
-    "#     'dateTime': '2024-10-18T19:52:11-07:00',\n",
-    "#     'timeZone': 'America/Los_Angeles',\n",
-    "#   },\n",
-    "#   'end': {\n",
-    "#     'dateTime': '2024-10-18T20:52:11-07:00',\n",
-    "#     'timeZone': 'America/Los_Angeles',\n",
-    "#   },\n",
-    "#   'recurrence': [\n",
-    "#     'RRULE:FREQ=DAILY;COUNT=2'\n",
-    "#   ],\n",
-    "#   'attendees': [\n",
-    "#     {'email': 'lpage@example.com'},\n",
-    "#     {'email': 'sbrin@example.com'},\n",
-    "#   ],\n",
-    "#   'reminders': {\n",
-    "#     'useDefault': False,\n",
-    "#     'overrides': [\n",
-    "#       {'method': 'email', 'minutes': 24 * 60},\n",
-    "#       {'method': 'popup', 'minutes': 10},\n",
-    "#     ],\n",
-    "#   },\n",
-    "#   \"conferenceData\": {\n",
-    "#       \"createRequest\": {\n",
-    "#         \"requestId\": str(uuid.uuid4()), # Necesario para que funcione\n",
-    "#         \"conferenceSolutionKey\": {\n",
-    "#           \"type\": \"hangoutsMeet\"\n",
-    "#         }\n",
-    "#       },\n",
-    "#   }\n",
-    "# }\n",
-    "\n",
-    "event = {\n",
-    "  'summary': 'Evento Random',\n",
-    "  'location': None, \n",
-    "  'description': None, \n",
-    "  'start': {\n",
-    "    'dateTime': '2024-10-18T21:52:11-07:00',\n",
-    "    'timeZone': 'America/Los_Angeles',\n",
-    "  },\n",
-    "  'end': {\n",
-    "    'dateTime': '2024-10-18T22:52:11-07:00',\n",
-    "    'timeZone': 'America/Los_Angeles',\n",
-    "  },\n",
-    "  'recurrence': None,\n",
-    "  'attendees': None,\n",
-    "  'reminders': None,\n",
-    "  \"conferenceData\": None\n",
-    "}\n",
-    "\n",
-    "event = service.events().insert(calendarId='primary', body=event, conferenceDataVersion=1).execute()\n",
-    "service.events\n",
-    "print ('Event created: %s' % (event.get('htmlLink')))\n",
-    "\n"
+    "now = Calendar.get_current_time()\n",
+    "event = Calendar.create_event_body(summary=\"Test Event\",\n",
+    "                                   start_time=now,\n",
+    "                                   end_time=Calendar.plus_time(now, 30),\n",
+    "                                   timezone='America/Mexico_City')\n",
+    "Calendar.create_event(service, event)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "zolkin-backend-gnCmVbxQ",
+   "display_name": "zolkin-backend-dA_7IZFM",
    "language": "python",
    "name": "python3"
   },
