♻️ Refactor code to add get_events() method to Calendar class

--- a/notebooks/calendar.ipynb
+++ b/notebooks/calendar.ipynb
@@ -125,17 +125,18 @@
     "- `create_event_body()`: Crea el cuerpo de un evento.\n",
     "- `create_event()`: Crea un evento (con el cuerpo del evento).\n",
     "- `get_current_time()`: Obtiene la fecha y hora actual.\n",
-    "- `plus_time()`: Suma un tiempo a una fecha dada."
+    "- `plus_time()`: Suma un tiempo a una fecha dada.\n",
+    "- `get_events()`: Obtiene los eventos de un calendario."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os.path\n",
-    "from typing import Any, List, Dict, Optional, Union\n",
+    "from typing import Any, List, Dict, Optional, Union, Literal\n",
     "from datetime import datetime, timedelta\n",
     "\n",
     "from google.auth.transport.requests import Request\n",
@@ -148,6 +149,7 @@
     "# If modifying these scopes, delete the file token.json.\n",
     "SCOPES = [\"https://www.googleapis.com/auth/calendar\"]\n",
     "\n",
+    "UpdateType = Literal['none', 'all', 'externalOnly']\n",
     "\n",
     "class Calendar():\n",
     "    @classmethod\n",
@@ -235,7 +237,33 @@
     "    def plus_time(cls, current_datetime: str, minutes: int) -> str:\n",
     "        date_object = datetime.fromisoformat(current_datetime).strftime('%Y-%m-%d %H:%M:%S')\n",
     "        new_date = datetime.strptime(date_object, '%Y-%m-%d %H:%M:%S') + timedelta(minutes=minutes)\n",
-    "        return new_date.replace(microsecond=0).isoformat()"
+    "        return new_date.replace(microsecond=0).isoformat()\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def get_events(cls, service: Any, calendarId: str = 'primary', \n",
+    "                   maxResults: int = 10, min_time: Optional[str] = None, \n",
+    "                   max_time: Optional[str] = None) -> List[Dict[str, str]]:\n",
+    "        events_data = []\n",
+    "        events_result = service.events().list(calendarId=calendarId,\n",
+    "                                              timeMin=min_time if min_time else cls.get_current_time(),\n",
+    "                                              timeMax=max_time,\n",
+    "                                              maxResults=maxResults,\n",
+    "                                              singleEvents=True,\n",
+    "                                              orderBy='startTime').execute()\n",
+    "        events = events_result.get('items', [])\n",
+    "        for event in events:\n",
+    "            start = event[\"start\"].get(\"dateTime\", event[\"start\"].get(\"date\"))\n",
+    "            events_data.append({'id': event['id'], 'start': start, 'summary': event['summary']})\n",
+    "\n",
+    "        return events_data\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def delete_event(cls, service: Any,  eventId: str, calendarId: str = 'primary',\n",
+    "                     sendUpdates: Optional[UpdateType] = 'none') -> None:\n",
+    "        try:\n",
+    "            service.events().delete(calendarId=calendarId, eventId=eventId).execute()\n",
+    "        except HttpError as error:\n",
+    "            print(f\"An error occurred: {error}\")\n"
    ]
   },
   {
@@ -257,16 +285,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://www.google.com/calendar/event?eid=ZTZjbm1jbTg1cGwyY2czbzkyMGFwaDZ1MzQgam9yZ2VhbmczM0Bt'"
+       "[{'id': 'e6cnmcm85pl2cg3o920aph6u34',\n",
+       "  'start': '2024-10-21T17:06:21-06:00',\n",
+       "  'summary': 'Test Event'},\n",
+       " {'id': 't3shctfr7eoaff2qqp52a3upqo',\n",
+       "  'start': '2024-12-10T10:00:00-06:00',\n",
+       "  'summary': 'Reunion con el equipo'}]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,12 +308,15 @@
     "Calendar.get_id_calendars(service)\n",
     "Calendar.get_calendars_info(service)\n",
     "\n",
-    "now = Calendar.get_current_time()\n",
-    "event = Calendar.create_event_body(summary=\"Test Event\",\n",
-    "                                   start_time=now,\n",
-    "                                   end_time=Calendar.plus_time(now, 30),\n",
-    "                                   timezone='America/Mexico_City')\n",
-    "Calendar.create_event(service, event)"
+    "# now = Calendar.get_current_time()\n",
+    "# event = Calendar.create_event_body(summary=\"Test Event\",\n",
+    "#                                    start_time=now,\n",
+    "#                                    end_time=Calendar.plus_time(now, 30),\n",
+    "#                                    timezone='America/Mexico_City')\n",
+    "# Calendar.create_event(service, event)\n",
+    "\n",
+    "Calendar.get_events(service)\n",
+    "Calendar.delete_event(service, 'eventId', sendUpdates='none')"
    ]
   }
  ],
