--- a/notebooks/calendar.ipynb
+++ b/notebooks/calendar.ipynb
@@ -117,7 +117,9 @@
     "---\n",
     "\n",
     "## Clase Calendar \n",
-    "Para interactuar con la API de Google Calendar, se puede utilizar la clase `Calendar` que tiene los siguientes métodos:\n",
+    "\n",
+    "**Para interactuar con la API de Google Calendar, se puede utilizar la clase `Calendar` que tiene los siguientes métodos:**\n",
+    "\n",
     "- `get_credentials()`: Obtiene las credenciales de autenticación.\n",
     "- `get_service()`: Obtiene el servicio de Google Calendar.\n",
     "- `get_id_calendar()`: Obtiene el id de todos los calendarios.\n",
@@ -126,17 +128,23 @@
     "- `create_event()`: Crea un evento (con el cuerpo del evento).\n",
     "- `get_current_time()`: Obtiene la fecha y hora actual.\n",
     "- `plus_time()`: Suma un tiempo a una fecha dada.\n",
-    "- `get_events()`: Obtiene los eventos de un calendario."
+    "- `get_events()`: Obtiene los eventos de un calendario.\n",
+    "- `delete_event()`: Elimina un evento de un calendario.\n",
+    "- `move_event()`: Mueve un evento de un calendario a otro.\n",
+    "- `get_event()`: Obtiene un evento de un calendario.\n",
+    "- `update_event()`: Actualiza un evento de un calendario."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pprint import pprint\n",
+    "\n",
     "import os.path\n",
-    "from typing import Any, List, Dict, Optional, Union, Literal\n",
+    "from typing import Any, List, Dict, Optional, Literal\n",
     "from datetime import datetime, timedelta\n",
     "\n",
     "from google.auth.transport.requests import Request\n",
@@ -150,6 +158,8 @@
     "SCOPES = [\"https://www.googleapis.com/auth/calendar\"]\n",
     "\n",
     "UpdateType = Literal['none', 'all', 'externalOnly']\n",
+    "Colors = Literal['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11']\n",
+    "Disponibility = Literal['opaque', 'transparent']\n",
     "\n",
     "class Calendar():\n",
     "    @classmethod\n",
@@ -198,13 +208,15 @@
     "                          summary: str, \n",
     "                          start_time: str,\n",
     "                          end_time: str,\n",
-    "                          timezone: str,\n",
+    "                          timezone: Optional[str] = 'America/Mexico_City',\n",
     "                          location: Optional[str] = None,\n",
     "                          description: Optional[str] = None,\n",
     "                          recurrence: Optional[List[str]] = None,\n",
     "                          attendees: Optional[List[Dict[str, str]]] = None,\n",
-    "                          reminders: Optional[Dict[str, Union[bool, List[Dict[str, Union[str, int]]]]]] = None,\n",
-    "                          conference_data: Optional[Dict[str, dict]] = None \n",
+    "                          reminders: Optional[Dict[str, Any]] = None,\n",
+    "                          conference_data: Optional[Dict[str, dict]] = None,\n",
+    "                          color: Optional[Colors] = None, \n",
+    "                          transparency: Optional[Disponibility] = 'opaque'\n",
     "                        ) -> Dict[str, Any]:\n",
     "        return {\n",
     "            \"summary\": summary,\n",
@@ -215,7 +227,36 @@
     "            \"recurrence\": recurrence,\n",
     "            \"attendees\": attendees,\n",
     "            \"reminders\": reminders,\n",
-    "            \"conferenceData\": conference_data\n",
+    "            \"conferenceData\": conference_data, \n",
+    "            \"colorId\": color, \n",
+    "            \"transparency\": transparency\n",
+    "        }\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def create_allday_event_body(cls, \n",
+    "                          summary: str, \n",
+    "                          start_time: str,\n",
+    "                          end_time: str,\n",
+    "                          timezone: Optional[str] = 'America/Mexico_City',\n",
+    "                          location: Optional[str] = None,\n",
+    "                          description: Optional[str] = None,\n",
+    "                          recurrence: Optional[List[str]] = None,\n",
+    "                          attendees: Optional[List[Dict[str, str]]] = None,\n",
+    "                          reminders: Optional[Dict[str, Any]] = None,\n",
+    "                          conference_data: Optional[Dict[str, dict]] = None,\n",
+    "                          color: Optional[str] = None\n",
+    "                        ) -> Dict[str, Any]:\n",
+    "        return {\n",
+    "            \"summary\": summary,\n",
+    "            \"location\": location,\n",
+    "            \"description\": description,\n",
+    "            \"start\": {\"date\": start_time, \"timeZone\": timezone},\n",
+    "            \"end\": {\"date\": end_time, \"timeZone\": timezone},\n",
+    "            \"recurrence\": recurrence,\n",
+    "            \"attendees\": attendees,\n",
+    "            \"reminders\": reminders,\n",
+    "            \"conferenceData\": conference_data, \n",
+    "            \"colorId\": color\n",
     "        }\n",
     "    \n",
     "    @classmethod\n",
@@ -242,28 +283,64 @@
     "    @classmethod\n",
     "    def get_events(cls, service: Any, calendarId: str = 'primary', \n",
     "                   maxResults: int = 10, min_time: Optional[str] = None, \n",
-    "                   max_time: Optional[str] = None) -> List[Dict[str, str]]:\n",
+    "                   max_time: Optional[str] = None, single_events: Optional[bool] = True, \n",
+    "                   query: Optional[str] = None\n",
+    "                   ) -> List[Dict[str, str]]:\n",
     "        events_data = []\n",
     "        events_result = service.events().list(calendarId=calendarId,\n",
     "                                              timeMin=min_time if min_time else cls.get_current_time(),\n",
     "                                              timeMax=max_time,\n",
     "                                              maxResults=maxResults,\n",
-    "                                              singleEvents=True,\n",
+    "                                              singleEvents=single_events,\n",
+    "                                              q=query,\n",
     "                                              orderBy='startTime').execute()\n",
     "        events = events_result.get('items', [])\n",
-    "        for event in events:\n",
-    "            start = event[\"start\"].get(\"dateTime\", event[\"start\"].get(\"date\"))\n",
-    "            events_data.append({'id': event['id'], 'start': start, 'summary': event['summary']})\n",
-    "\n",
+    "        try: \n",
+    "            for event in events:\n",
+    "                events_data.append({\n",
+    "                        'id': event['id'], \n",
+    "                        'start': event[\"start\"].get(\"dateTime\"), \n",
+    "                        'end': event[\"end\"].get(\"dateTime\"),\n",
+    "                        'summary': event['summary'], \n",
+    "                        'htmlLink': event.get('htmlLink'), \n",
+    "                        'creator': event.get('creator').get('email'),\n",
+    "                        'organizer': event.get('organizer').get('email'),\n",
+    "                        })\n",
+    "        except KeyError as error:\n",
+    "            raise KeyError(f\"An error occurred: {error}\")\n",
     "        return events_data\n",
     "    \n",
     "    @classmethod\n",
     "    def delete_event(cls, service: Any,  eventId: str, calendarId: str = 'primary',\n",
     "                     sendUpdates: Optional[UpdateType] = 'none') -> None:\n",
     "        try:\n",
-    "            service.events().delete(calendarId=calendarId, eventId=eventId).execute()\n",
+    "            service.events().delete(calendarId=calendarId, eventId=eventId, sendUpdates=sendUpdates).execute()\n",
     "        except HttpError as error:\n",
-    "            print(f\"An error occurred: {error}\")\n"
+    "            print(f\"An error occurred: {error}\")\n",
+    "\n",
+    "    @classmethod\n",
+    "    def move_event(cls, service: Any, eventId: str, destination: str, calendarId: str = 'primary') -> str:\n",
+    "        updated_event = service.events().move(\n",
+    "            calendarId=calendarId, eventId=eventId,\n",
+    "            destination=destination).execute()\n",
+    "        return updated_event['htmlLink']\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def get_event(cls, service: Any, eventId: str, calendarId: str = 'primary') -> Any:\n",
+    "        event = service.events().get(calendarId=calendarId, eventId=eventId).execute()\n",
+    "        return event\n",
+    "\n",
+    "    @classmethod\n",
+    "    def update_event(cls, service: Any, event: Dict[str, Any], calendarId: str = 'primary') -> str:\n",
+    "        updated_event = service.events().update(calendarId=calendarId, eventId=event['id'], body=event).execute()\n",
+    "        return updated_event['htmlLink']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplos"
    ]
   },
   {
@@ -284,39 +361,335 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Creación de un evento de 40 min"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 'e6cnmcm85pl2cg3o920aph6u34',\n",
-       "  'start': '2024-10-21T17:06:21-06:00',\n",
-       "  'summary': 'Test Event'},\n",
-       " {'id': 't3shctfr7eoaff2qqp52a3upqo',\n",
-       "  'start': '2024-12-10T10:00:00-06:00',\n",
-       "  'summary': 'Reunion con el equipo'}]"
+       "'https://www.google.com/calendar/event?eid=Y2M4a3BqNnV1aWFxYnJvN3ZuaWkydWRmYTQgam9yZ2VhbmczM0Bt'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Calendar.get_id_calendars(service)\n",
-    "Calendar.get_calendars_info(service)\n",
+    "now = Calendar.get_current_time()\n",
+    "now_plus_40_min= Calendar.plus_time(now, 40)\n",
     "\n",
-    "# now = Calendar.get_current_time()\n",
-    "# event = Calendar.create_event_body(summary=\"Test Event\",\n",
-    "#                                    start_time=now,\n",
-    "#                                    end_time=Calendar.plus_time(now, 30),\n",
-    "#                                    timezone='America/Mexico_City')\n",
-    "# Calendar.create_event(service, event)\n",
+    "body = Calendar.create_event_body(\n",
+    "    summary=\"test event\",\n",
+    "    start_time=now,\n",
+    "    end_time=now_plus_40_min,\n",
+    ")\n",
     "\n",
-    "Calendar.get_events(service)\n",
-    "Calendar.delete_event(service, 'eventId', sendUpdates='none')"
+    "Calendar.create_event(service, body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Creación de un evento de todo el día"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.google.com/calendar/event?eid=ZDB1ZXNwOXZlNzk0cGs3YW9vbWRzaWtoaGsgam9yZ2VhbmczM0Bt'"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "now = Calendar.get_current_time()\n",
+    "today = datetime.fromisoformat(now) - timedelta(minutes=(datetime.fromisoformat(now).minute))\n",
+    "\n",
+    "body = Calendar.create_allday_event_body(\n",
+    "    summary=\"all day Event\",\n",
+    "    start_time=today.strftime('%Y-%m-%d'),\n",
+    "    end_time=(today + timedelta(days=1)).strftime('%Y-%m-%d'),\n",
+    ")\n",
+    "\n",
+    "Calendar.create_event(service, body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Creación de un evento con recurrencia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.google.com/calendar/event?eid=MmpmaHIyOXRjMTR0MW5mcHJzcGVwcGZlMjhfMjAyNDEwMjJUMDQxMTAwWiBqb3JnZWFuZzMzQG0'"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now = Calendar.get_current_time()\n",
+    "now_plus_40_min= Calendar.plus_time(now, 40)\n",
+    "\n",
+    "body = Calendar.create_event_body(\n",
+    "    summary=\"test recurrence event\",\n",
+    "    start_time=now,\n",
+    "    end_time=now_plus_40_min,\n",
+    "    recurrence=['RRULE:FREQ=DAILY;COUNT=2']\n",
+    ")\n",
+    "\n",
+    "Calendar.create_event(service, body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Creación de un evento con invitados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.google.com/calendar/event?eid=OHBlZG43cWprZ2pwdDcxNnFyZmluZjVtcWsgam9yZ2VhbmczM0Bt'"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now = Calendar.get_current_time()\n",
+    "now_plus_40_min= Calendar.plus_time(now, 40)\n",
+    "\n",
+    "body = Calendar.create_event_body(\n",
+    "    summary=\"test attendees event\",\n",
+    "    start_time=now,\n",
+    "    end_time=now_plus_40_min,\n",
+    "    attendees=[{'email': 'juan@example.com'},\n",
+    "               {'email': 'pedro@example.com'}]\n",
+    ")\n",
+    "\n",
+    "Calendar.create_event(service, body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Creación de un evento con recordatorio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.google.com/calendar/event?eid=Z3I1MjN2bmwwMmwydjdhZXFwZ2gzMWZnYjggam9yZ2VhbmczM0Bt'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now = Calendar.get_current_time()\n",
+    "now_plus_40_min= Calendar.plus_time(now, 40)\n",
+    "\n",
+    "body = Calendar.create_event_body(\n",
+    "    summary=\"test reminders event\",\n",
+    "    start_time=now,\n",
+    "    end_time=now_plus_40_min,\n",
+    "    reminders={\n",
+    "        'useDefault': False,\n",
+    "        'overrides': [\n",
+    "            {'method': 'email', 'minutes': 24 * 60},\n",
+    "            {'method': 'popup', 'minutes': 10},\n",
+    "        ],\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "Calendar.create_event(service, body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Creación de un evento con conferencia de Google Meet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.google.com/calendar/event?eid=MTRnOTQwNmxhM3Q4bzZxbWlsYTU2anFoc2cgam9yZ2VhbmczM0Bt'"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from uuid import uuid4\n",
+    "\n",
+    "\n",
+    "now = Calendar.get_current_time()\n",
+    "now_plus_40_min = Calendar.plus_time(now, 40)\n",
+    "\n",
+    "body = Calendar.create_event_body(\n",
+    "    summary=\"test event with conference\",\n",
+    "    start_time=now,\n",
+    "    end_time=now_plus_40_min,\n",
+    "    conference_data={\n",
+    "        \"createRequest\": {\n",
+    "            \"requestId\": str(uuid4()),\n",
+    "            \"conferenceSolutionKey\": {\n",
+    "                \"type\": \"hangoutsMeet\"\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "Calendar.create_event(service, body, conferenceData=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Creación de un evento con diferente color"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.google.com/calendar/event?eid=djNkZzduMG91OTBtOGJraDQ4bjRtMjBmYmsgam9yZ2VhbmczM0Bt'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now = Calendar.get_current_time()\n",
+    "now_plus_40_min= Calendar.plus_time(now, 40)\n",
+    "\n",
+    "body = Calendar.create_event_body(\n",
+    "    summary=\"test event with different color\",\n",
+    "    start_time=now,\n",
+    "    end_time=now_plus_40_min,\n",
+    "    color='10'\n",
+    ")\n",
+    "\n",
+    "Calendar.create_event(service, body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Creación de un evento con modificación de disponibilidad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.google.com/calendar/event?eid=c3NqYTUzaGhybDVqdjQ2Yzc5bG51cDR2Y3Mgam9yZ2VhbmczM0Bt'"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now = Calendar.get_current_time()\n",
+    "now_plus_40_min= Calendar.plus_time(now, 40)\n",
+    "\n",
+    "body = Calendar.create_event_body(\n",
+    "    summary=\"test event with disponibility\",\n",
+    "    start_time=now,\n",
+    "    end_time=now_plus_40_min,\n",
+    "    transparency='transparent' # Disponible\n",
+    "    # transparency='opaque' # Ocupado\n",
+    ")\n",
+    "\n",
+    "Calendar.create_event(service, body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Creación de eventos con texto:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "created_event = service.events().quickAdd(\n",
+    "    calendarId='primary',\n",
+    "    text='Salida con amigos').execute()"
    ]
   }
  ],
