--- a/notebooks/calendar.ipynb
+++ b/notebooks/calendar.ipynb
@@ -122,7 +122,7 @@
     "\n",
     "- `get_credentials()`: Obtiene las credenciales de autenticación.\n",
     "- `get_service()`: Obtiene el servicio de Google Calendar.\n",
-    "- `get_id_calendar()`: Obtiene el id de todos los calendarios.\n",
+    "- `get_id_calendar()`: Obtiene el id de todos los calendarios que se tiene acceso para modificar.\n",
     "- `get_calendars_info()`: Obtiene la información de todos los calendarios.\n",
     "- `create_event_body()`: Crea el cuerpo de un evento.\n",
     "- `create_event()`: Crea un evento (con el cuerpo del evento).\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,20 +187,15 @@
     "        return build(\"calendar\", \"v3\", credentials=creds)\n",
     "    \n",
     "    @classmethod\n",
-    "    def get_id_calendars(cls, service: Any) -> List[str]:\n",
-    "        calendars = []\n",
-    "        for cal in service.calendarList().list().execute().get('items', []):\n",
-    "            if cal.get('selected', None): # select relevant calendars in google calendar UI\n",
-    "                calendars.append(cal['id'])\n",
-    "        return calendars\n",
-    "    \n",
-    "    @classmethod\n",
-    "    def get_calendars_info(cls, service: Any) -> List[dict]:\n",
+    "    def get_calendars_info(cls, service: Any) -> List[Dict[str, str]]:\n",
     "        calendars = service.calendarList().list().execute()\n",
     "        data = []\n",
     "        for item in calendars.get('items', []):\n",
     "            if item['accessRole'] != 'reader':\n",
-    "                data.append({'kind': item['kind'], 'id': item['id'], 'timeZone': item['timeZone']})\n",
+    "                data.append({\n",
+    "                    'id': item['id'], \n",
+    "                    'summary': item['summary'],\n",
+    "                    'timeZone': item['timeZone']})\n",
     "        return data\n",
     "    \n",
     "    @classmethod\n",
@@ -319,10 +314,15 @@
     "            print(f\"An error occurred: {error}\")\n",
     "\n",
     "    @classmethod\n",
-    "    def move_event(cls, service: Any, eventId: str, destination: str, calendarId: str = 'primary') -> str:\n",
+    "    def move_event(cls, service: Any, eventId: str,\n",
+    "                   destination: str,\n",
+    "                   origin: str = 'primary', \n",
+    "                   send_updates: Optional[UpdateType] = 'none') -> str:\n",
+    "        \n",
     "        updated_event = service.events().move(\n",
-    "            calendarId=calendarId, eventId=eventId,\n",
-    "            destination=destination).execute()\n",
+    "            calendarId=origin, eventId=eventId,\n",
+    "            destination=destination,\n",
+    "            sendUpdates=send_updates).execute()\n",
     "        return updated_event['htmlLink']\n",
     "    \n",
     "    @classmethod\n",
@@ -331,8 +331,12 @@
     "        return event\n",
     "\n",
     "    @classmethod\n",
-    "    def update_event(cls, service: Any, event: Dict[str, Any], calendarId: str = 'primary') -> str:\n",
-    "        updated_event = service.events().update(calendarId=calendarId, eventId=event['id'], body=event).execute()\n",
+    "    def update_event(cls, service: Any, event: Dict[str, Any],\n",
+    "                     calendarId: str = 'primary',\n",
+    "                     send_updates: Optional[UpdateType] = 'none') -> str:\n",
+    "        updated_event = service.events().update(calendarId=calendarId,\n",
+    "                                                eventId=event['id'], body=event,\n",
+    "                                                sendUpdates=send_updates).execute()\n",
     "        return updated_event['htmlLink']"
    ]
   },
@@ -345,14 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=69722697557-n13nrkrq7t630sthrt70fucdcmn19hsl.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A53710%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcalendar&state=BnqJf8yScI6ArWLoRxA6yW4XaIaCFe&access_type=offline\n"
+      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=69722697557-n13nrkrq7t630sthrt70fucdcmn19hsl.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A49846%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcalendar&state=O9XUFhvioLancULF8dTweKnhnG11SL&access_type=offline\n"
      ]
     }
    ],
@@ -691,6 +695,154 @@
     "    calendarId='primary',\n",
     "    text='Salida con amigos').execute()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "##### Actualización de un evento \n",
+    "\n",
+    "Con la utilidad de obtener un evento por su id, se puede actualizar un evento, y se puede enviar un correo a los invitados notificando la actualización."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'creator': 'jorgeang33@gmail.com',\n",
+      "  'end': '2024-10-22T14:00:00-06:00',\n",
+      "  'htmlLink': 'https://www.google.com/calendar/event?eid=NTVzM3A1djJjc24xN2lvanVjcDhmczZycXMgam9yZ2VhbmczM0Bt',\n",
+      "  'id': '55s3p5v2csn17iojucp8fs6rqs',\n",
+      "  'organizer': 'jorgeang33@gmail.com',\n",
+      "  'start': '2024-10-22T12:00:00-06:00',\n",
+      "  'summary': 'Updated Event with updates'}]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.google.com/calendar/event?eid=NTVzM3A1djJjc24xN2lvanVjcDhmczZycXMgam9yZ2VhbmczM0Bt'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "\n",
+    "\n",
+    "events = Calendar.get_events(service)\n",
+    "pprint(events)\n",
+    "event = Calendar.get_event(service, eventId=events[0]['id'], calendarId=events[0]['organizer'])\n",
+    "event['summary'] = 'Updated Event with updates'\n",
+    "event.update({'description': 'Se añade una descripcion al evento'})\n",
+    "event.update({'colorId': '3'})\n",
+    "Calendar.update_event(service, event, calendarId=events[0]['organizer'], send_updates='all')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "##### Movimiento de un evento de un calendario a otro\n",
+    "Sin notificación a los invitados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'id': '9a1c2703ead6fd80455f9e1eb04158669a60d7ab77a8a29ea9ae8d530954b4f7@group.calendar.google.com',\n",
+      "  'summary': 'Familia',\n",
+      "  'timeZone': 'America/Mexico_City'},\n",
+      " {'id': 'stdevelopersyelling@gmail.com',\n",
+      "  'summary': 'stdevelopersyelling@gmail.com',\n",
+      "  'timeZone': 'America/Mexico_City'},\n",
+      " {'id': 'jorgeang33@gmail.com',\n",
+      "  'summary': 'jorgeang33@gmail.com',\n",
+      "  'timeZone': 'America/Mexico_City'}]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.google.com/calendar/event?eid=N2pmN2JodGlxcmlhN2tqMmExYjg5czAwc24gam9yZ2VhbmczM0Bt'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "\n",
+    "\n",
+    "calendars = Calendar.get_calendars_info(service)\n",
+    "pprint(calendars)\n",
+    "events = Calendar.get_events(service)\n",
+    "event = Calendar.get_event(service, \n",
+    "                           eventId=events[0]['id'],\n",
+    "                           calendarId=events[0]['organizer'])\n",
+    "\n",
+    "Calendar.move_event(service, eventId=event['id'], destination=calendars[0]['id'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Movimiento de un evento de un calendario a otro\n",
+    "Con notificación a los invitados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calendars = Calendar.get_calendars_info(service)\n",
+    "events = Calendar.get_events(service)\n",
+    "event = Calendar.get_event(service, \n",
+    "                           eventId=events[0]['id'],\n",
+    "                           calendarId=events[0]['organizer'],\n",
+    "                           send_updates='all')\n",
+    "\n",
+    "Calendar.move_event(service, eventId=event['id'], destination=calendars[1]['id'], )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "##### Eliminación de un evento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
