♻️ Refactor Calendar class to improve code readability and examples

--- a/notebooks/calendar.ipynb
+++ b/notebooks/calendar.ipynb
@@ -122,9 +122,9 @@
     "\n",
     "- `get_credentials()`: Obtiene las credenciales de autenticación.\n",
     "- `get_service()`: Obtiene el servicio de Google Calendar.\n",
-    "- `get_id_calendar()`: Obtiene el id de todos los calendarios que se tiene acceso para modificar.\n",
-    "- `get_calendars_info()`: Obtiene la información de todos los calendarios.\n",
+    "- `get_calendars_info()`: Obtiene la información de todos los calendarios que el usuario puede editar.\n",
     "- `create_event_body()`: Crea el cuerpo de un evento.\n",
+    "- `create_allday_event_body()`: Crea el cuerpo de un evento de todo el día.\n",
     "- `create_event()`: Crea un evento (con el cuerpo del evento).\n",
     "- `get_current_time()`: Obtiene la fecha y hora actual.\n",
     "- `plus_time()`: Suma un tiempo a una fecha dada.\n",
@@ -839,10 +839,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'id': '9a1c2703ead6fd80455f9e1eb04158669a60d7ab77a8a29ea9ae8d530954b4f7@group.calendar.google.com',\n",
+      "  'summary': 'Familia',\n",
+      "  'timeZone': 'America/Mexico_City'},\n",
+      " {'id': 'stdevelopersyelling@gmail.com',\n",
+      "  'summary': 'stdevelopersyelling@gmail.com',\n",
+      "  'timeZone': 'America/Mexico_City'},\n",
+      " {'id': 'jorgeang33@gmail.com',\n",
+      "  'summary': 'jorgeang33@gmail.com',\n",
+      "  'timeZone': 'America/Mexico_City'}]\n",
+      "[{'creator': 'jorgeang33@gmail.com',\n",
+      "  'end': '2024-10-22T15:00:00-06:00',\n",
+      "  'htmlLink': 'https://www.google.com/calendar/event?eid=N2pmN2JodGlxcmlhN2tqMmExYjg5czAwc24gam9yZ2VhbmczM0Bt',\n",
+      "  'id': '7jf7bhtiqria7kj2a1b89s00sn',\n",
+      "  'organizer': 'jorgeang33@gmail.com',\n",
+      "  'start': '2024-10-22T13:00:00-06:00',\n",
+      "  'summary': 'Evento random'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "\n",
+    "\n",
+    "calendars = Calendar.get_calendars_info(service)\n",
+    "pprint(calendars)\n",
+    "events = Calendar.get_events(service)\n",
+    "pprint(events)\n",
+    "event = Calendar.get_event(service, \n",
+    "                           eventId=events[0]['id'],\n",
+    "                           calendarId=events[0]['organizer'])\n",
+    "\n",
+    "Calendar.delete_event(service, eventId=event['id'],\n",
+    "                      calendarId=events[0]['organizer'],\n",
+    "                      sendUpdates='all')"
+   ]
   }
  ],
  "metadata": {
