🎨 Improvement Gmail notebook and add documentation links

--- a/notebooks/gmail.ipynb
+++ b/notebooks/gmail.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Mas informacion sobre el uso de la API de Gmail en [Guía de inicio rápido de Python | Gmail | Google for Developers](https://developers.google.com/gmail/api/quickstart/python?hl=es_419)\n",
     "\n",
-    "**Quickstart de la API:** "
+    "## Quickstart de la API:"
    ]
   },
   {
@@ -88,7 +88,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interaccion con la API con LangChain\n",
+    "## Interaccion de la API con LangChain\n",
+    "\n",
+    "Más informacion sobre este toolkit en: [Gmail Toolkit | 🦜️🔗 LangChain](https://python.langchain.com/docs/integrations/tools/gmail/)\n",
     "\n",
     "**Pruebas con las herramientas (sin agente)**"
    ]
@@ -107,9 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=69722697557-n13nrkrq7t630sthrt70fucdcmn19hsl.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A53758%2F&scope=https%3A%2F%2Fmail.google.com%2F&state=wQyPT0QSxchkStgobsNpNk6LmIZ58Q&access_type=offline\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_google_community.gmail.utils import (\n",
     "    build_resource_service,\n",
@@ -120,9 +130,9 @@
     "# Can review scopes here https://developers.google.com/gmail/api/auth/scopes\n",
     "# For instance, readonly scope is 'https://www.googleapis.com/auth/gmail.readonly'\n",
     "credentials = get_gmail_credentials(\n",
-    "    token_file=\"token.json\",\n",
+    "    token_file=\"../secrets/token.json\",\n",
     "    scopes=[\"https://mail.google.com/\"],\n",
-    "    client_secrets_file=\"credentials.json\",\n",
+    "    client_secrets_file=\"../secrets/credentials.json\",\n",
     ")\n",
     "api_resource = build_resource_service(credentials=credentials)\n",
     "toolkit = GmailToolkit(api_resource=api_resource)"
@@ -130,20 +140,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[GmailCreateDraft(api_resource=<googleapiclient.discovery.Resource object at 0x000002233F6663C0>),\n",
-       " GmailSendMessage(api_resource=<googleapiclient.discovery.Resource object at 0x000002233F6663C0>),\n",
-       " GmailSearch(api_resource=<googleapiclient.discovery.Resource object at 0x000002233F6663C0>),\n",
-       " GmailGetMessage(api_resource=<googleapiclient.discovery.Resource object at 0x000002233F6663C0>),\n",
-       " GmailGetThread(api_resource=<googleapiclient.discovery.Resource object at 0x000002233F6663C0>)]"
+       "[GmailCreateDraft(api_resource=<googleapiclient.discovery.Resource object at 0x10e4ec6e0>),\n",
+       " GmailSendMessage(api_resource=<googleapiclient.discovery.Resource object at 0x10e4ec6e0>),\n",
+       " GmailSearch(api_resource=<googleapiclient.discovery.Resource object at 0x10e4ec6e0>),\n",
+       " GmailGetMessage(api_resource=<googleapiclient.discovery.Resource object at 0x10e4ec6e0>),\n",
+       " GmailGetThread(api_resource=<googleapiclient.discovery.Resource object at 0x10e4ec6e0>)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +211,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Integracion de las herramientas con un Agente con LangGraph"
+    "### Integracion de las herramientas con un Agente con LangGraph\n",
+    "\n",
+    "Más información sobre construir un agente con LangGraph en: [Build an Agent | 🦜️🔗 LangChain](https://python.langchain.com/docs/tutorials/agents/#create-the-agent)"
    ]
   },
   {
@@ -304,7 +316,10 @@
    "metadata": {},
    "source": [
     "### Con un propmt template\n",
-    "Para hacer uso del RAG y de la memoria, que van a ser input para el agente"
+    "\n",
+    "Más información sobre los prompt templates con Agentes en: [How to migrate from legacy LangChain agents to LangGraph | 🦜️🔗 LangChain](https://python.langchain.com/docs/how_to/migrate_agent/#prompt-templates)\n",
+    "\n",
+    "**Para hacer uso del RAG y de la memoria, que van a ser input para el agente**"
    ]
   },
   {
@@ -439,7 +454,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chunks-nbCgvLYC",
+   "display_name": "zolkin-backend-dA_7IZFM",
    "language": "python",
    "name": "python3"
   },
@@ -453,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
